Fix permissions error when running tests in kind

--- a/task/modelcar-oci-ta/0.1/modelcar-oci-ta.yaml
+++ b/task/modelcar-oci-ta/0.1/modelcar-oci-ta.yaml
@@ -87,6 +87,8 @@ spec:
         name: $(params.caTrustConfigMapName)
         optional: true
   stepTemplate:
+    securityContext:
+      runAsGroup: 0
     env:
       - name: IMAGE
         value: $(params.IMAGE)
