Fix trusted-artifact paths in the tests

--- a/task/modelcar-oci-ta/0.1/tests/test-modelcar-oci-ta-alternative-arch.yaml
+++ b/task/modelcar-oci-ta/0.1/tests/test-modelcar-oci-ta-alternative-arch.yaml
@@ -92,7 +92,7 @@ spec:
               - create
               - --store
               - $(params.ociStorage)
-              - $(results.SOURCE_ARTIFACT.path)=/var/workdir/source
+              - $(results.SOURCE_ARTIFACT.path)=$(workspaces.tests-workspace.path)/source
     - name: run-modelcar-task
       taskRef:
         name: modelcar-oci-ta
