resolve dubious ownership issue
Signed-off-by: arewm <arewm@users.noreply.github.com>

--- a/.tekton/pull-request.yaml
+++ b/.tekton/pull-request.yaml
@@ -221,6 +221,7 @@ spec:
               script: |
                 #!/usr/bin/env bash
                 set -e
+                git config --global --add safe.directory /workspace/source/source
 
                 QUAY_NAMESPACE=konflux-ci \
                 TEST_REPO_NAME=pull-request-builds \
