--- a/.tekton/push.yaml
+++ b/.tekton/push.yaml
@@ -185,6 +185,7 @@ spec:
               script: |
                 #!/bin/bash
                 set -euo pipefail
+                git config --global --add safe.directory /workspace/source/source
 
                 DATA_BUNDLE_REPO=quay.io/konflux-ci/tekton-catalog/data-acceptable-bundles
                 DATA_BUNDLE_TAG=$(date '+%s')
