CODEOWNERS: add external-task/rpms-signature-scan
Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/CODEOWNERS
+++ b/CODEOWNERS
@@ -84,6 +84,7 @@
 /task/verify-signed-rpms    @amisstea @avi-biton @gbenhaim @yftacherzog
 
 # renovate groupName=vanguard
+/external-task/rpms-signature-scan          @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/build-helm-chart                      @amisstea @avi-biton @gbenhaim @yftacherzog
 /task/build-helm-chart-oci-ta               @amisstea @avi-biton @gbenhaim @yftacherzog
 /pipelines/tekton-bundle-builder            @konflux-ci/ec @amisstea @avi-biton @gbenhaim @yftacherzog
