--- a/renovate.json
+++ b/renovate.json
@@ -227,6 +227,7 @@
     {
       "groupName": "vanguard",
       "matchFileNames": [
+        "external-task/rpms-signature-scan/**",
         "pipelines/tekton-bundle-builder-oci-ta/**",
         "pipelines/tekton-bundle-builder/**",
         "task/build-helm-chart-oci-ta/**",
