fix(OCPBUGS-60987): change default mediaType from oci to docker
OpenShift's documentation indicates that disconnected clusters can
use any container registry that supports Docker v2-2. This means that
disconnected mirroring will fail if the registry doesn't support OCI.

https://docs.redhat.com/en/documentation/openshift_container_platform/4.19/html/disconnected_environments/connected-to-disconnected

In order to have the easiest default support for all images produced, we
should just change the default mediaType. If any users want OCI specific
mediaTypes, they can still enable that.

Signed-off-by: arewm <arewm@users.noreply.github.com>

--- a/pipelines/core-services/patch.yaml
+++ b/pipelines/core-services/patch.yaml
@@ -81,13 +81,18 @@
 #      9  image-expires-after
 #     10  build-source-image
 #     11  build-image-index
-#     12  build-args
-#     13  build-args-file
-#     14  privileged-nested
+#     12  buildah-format
+#     13  build-args
+#     14  build-args-file
+#     15  privileged-nested
 
 # Remove privilege-nested pipeline param
 - op: remove
-  path: /spec/params/14
+  path: /spec/params/15
+# We want to always build OCI images by default
+- op: replace
+  path: /spec/params/12/default  # buildah-format
+  value: "oci"
 # We want to always build the image index by default
 - op: replace
   path: /spec/params/11/default  # build-image-index
