--- a/pipelines/docker-build/patch.yaml
+++ b/pipelines/docker-build/patch.yaml
@@ -89,6 +89,8 @@
     value: "$(params.build-args-file)"
   - name: PRIVILEGED_NESTED
     value: "$(params.privileged-nested)"
+  - name: BUILDAH_FORMAT
+    value: "$(params.buildah-format)"
 
 # FIXME: duplicate the "add" operations for sast-coverity-check, which is based on build-container
 - op: test
