--- a/pipelines/template-build/template-build.yaml
+++ b/pipelines/template-build/template-build.yaml
@@ -57,6 +57,11 @@ spec:
       description: Add built image into an OCI image index
       type: string
       default: "false"
+    - name: buildah-format
+      description: The format for the resulting image's mediaType. Valid values are
+        oci or docker (default).
+      type: string
+      default: "docker"
   tasks:
     - name: init
       params:
