--- a/task/build-image-index/0.1/build-image-index.yaml
+++ b/task/build-image-index/0.1/build-image-index.yaml
@@ -39,9 +39,9 @@ spec:
     type: string
     default: vfs
   - name: BUILDAH_FORMAT
-    description: The format for the resulting image's mediaType. Valid values are oci (default) or docker.
+    description: The format for the resulting image's mediaType. Valid values are oci or docker (default).
     type: string
-    default: oci
+    default: docker
   results:
   - description: Digest of the image just built
     name: IMAGE_DIGEST
