--- a/task/build-image-manifest/0.1/build-image-manifest.yaml
+++ b/task/build-image-manifest/0.1/build-image-manifest.yaml
@@ -44,9 +44,9 @@ spec:
     description: Storage driver to configure for buildah
     name: STORAGE_DRIVER
     type: string
-  - default: oci
+  - default: docker
     description: The format for the resulting image's mediaType. Valid values are
-      oci (default) or docker.
+      oci or docker (default).
     name: BUILDAH_FORMAT
     type: string
   results:
