--- a/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
+++ b/task/buildah-oci-ta/0.4/buildah-oci-ta.yaml
@@ -46,9 +46,9 @@ spec:
       default: ""
     - name: BUILDAH_FORMAT
       description: The format for the resulting image's mediaType. Valid values
-        are oci (default) or docker.
+        are oci or docker (default).
       type: string
-      default: oci
+      default: docker
     - name: BUILD_ARGS
       description: Array of --build-arg values ("arg=value" strings)
       type: array
