--- a/task/buildah/0.4/buildah.yaml
+++ b/task/buildah/0.4/buildah.yaml
@@ -133,9 +133,9 @@ spec:
     type: string
     default: spdx
   - name: BUILDAH_FORMAT
-    description: The format for the resulting image's mediaType. Valid values are oci (default) or docker.
+    description: The format for the resulting image's mediaType. Valid values are oci or docker (default).
     type: string
-    default: oci
+    default: docker
   - name: ADDITIONAL_BASE_IMAGES
     description: |-
       Additional base image references to include to the SBOM. Array of image_reference_with_digest strings
