--- a/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
+++ b/task/buildah-remote-oci-ta/0.4/buildah-remote-oci-ta.yaml
@@ -43,9 +43,9 @@ spec:
       be applied to the image
     name: ANNOTATIONS_FILE
     type: string
-  - default: oci
+  - default: docker
     description: The format for the resulting image's mediaType. Valid values are
-      oci (default) or docker.
+      oci or docker (default).
     name: BUILDAH_FORMAT
     type: string
   - default: []
