--- a/task/buildah-remote/0.4/buildah-remote.yaml
+++ b/task/buildah-remote/0.4/buildah-remote.yaml
@@ -148,9 +148,9 @@ spec:
       format.'
     name: SBOM_TYPE
     type: string
-  - default: oci
+  - default: docker
     description: The format for the resulting image's mediaType. Valid values are
-      oci (default) or docker.
+      oci or docker (default).
     name: BUILDAH_FORMAT
     type: string
   - default: []
