fix(OCPBUGS-60987): change default mediaType from oci to docker
OpenShift's documentation indicates that disconnected clusters can
use any container registry that supports Docker v2-2. This means that
disconnected mirroring will fail if the registry doesn't support OCI.

https://docs.redhat.com/en/documentation/openshift_container_platform/4.19/html/disconnected_environments/connected-to-disconnected

In order to have the easiest default support for all images produced, we
should just change the default mediaType. If any users want OCI specific
mediaTypes, they can still enable that.

FBC and tekton bundle builds must continue to use OCI format.

Migration script is created to add BUILDAH_FORMAT param if doesn't exist
with value "docker" (or "oci" for FBC/tekton bundle build).

Signed-off-by: arewm <arewm@users.noreply.github.com>
Signed-off-by: Martin Basti <mbasti@redhat.com>

--- a/pipelines/core-services/core-services.yaml
+++ b/pipelines/core-services/core-services.yaml
@@ -130,6 +130,11 @@ spec:
     description: Add built image into an OCI image index
     name: build-image-index
     type: string
+  - default: oci
+    description: The format for the resulting image's mediaType. Valid values are
+      oci or docker.
+    name: buildah-format
+    type: string
   - default: []
     description: Array of --build-arg values ("arg=value" strings) for buildah
     name: build-args
@@ -238,6 +243,8 @@ spec:
       value: $(params.build-args-file)
     - name: SOURCE_URL
       value: $(tasks.clone-repository.results.url)
+    - name: BUILDAH_FORMAT
+      value: $(params.buildah-format)
     - name: IMAGE_APPEND_PLATFORM
       value: "true"
     runAfter:
@@ -266,6 +273,8 @@ spec:
     - name: IMAGES
       value:
       - $(tasks.build-images.results.IMAGE_REF[*])
+    - name: BUILDAH_FORMAT
+      value: $(params.buildah-format)
     runAfter:
     - build-images
     taskRef:
