--- a/pipelines/docker-build/patch.yaml
+++ b/pipelines/docker-build/patch.yaml
@@ -91,6 +91,8 @@
     value: "$(params.privileged-nested)"
   - name: SOURCE_URL
     value: "$(tasks.clone-repository.results.url)"
+  - name: BUILDAH_FORMAT
+    value: "$(params.buildah-format)"
 
 # FIXME: duplicate the "add" operations for sast-coverity-check, which is based on build-container
 - op: test
