--- a/pipelines/tekton-bundle-builder/patch.yaml
+++ b/pipelines/tekton-bundle-builder/patch.yaml
@@ -61,3 +61,31 @@
   path: /spec/tasks/6   # deprecated-base-image-check
 - op: remove
   path: /spec/tasks/5   # build-source-image
+
+# Remove buildah format, it's not applicable for tekton-bundles
+# $ kustomize build pipelines/template-build/ | yq ".spec.params.[].name" | nl -v 0
+#      0  git-url
+#      1  revision
+#      2  output-image
+#      3  path-context
+#      4  dockerfile
+#      5  rebuild
+#      6  skip-checks
+#      7  hermetic
+#      8  prefetch-input
+#      9  image-expires-after
+#     10  build-source-image
+#     11  build-image-index
+#     12  buildah-format
+- op: remove
+  path: /spec/params/12  # buildah-format
+# Remove build-index-image task params
+# $ yq ".spec.tasks.4.params.[].name" pipelines/template-build/template-build.yaml | nl -v 0
+#      0	IMAGE
+#      1	COMMIT_SHA
+#      2	IMAGE_EXPIRES_AFTER
+#      3	ALWAYS_BUILD_INDEX
+#      4	IMAGES
+#      5	BUILDAH_FORMAT
+- op: remove
+  path: /spec/tasks/4/params/5  # BUILDAH_FORMAT
