fix(KONFLUX-9326): adding support for scanning entered paths
Signed-off-by: Kasem Alem <kalem@redhat.com>

--- a/task/sast-snyk-check-oci-ta/0.4/sast-snyk-check-oci-ta.yaml
+++ b/task/sast-snyk-check-oci-ta/0.4/sast-snyk-check-oci-ta.yaml
@@ -62,6 +62,11 @@ spec:
       description: The Trusted Artifact URI pointing to the artifact with
         the application source code.
       type: string
+    - name: TARGET_DIRS
+      description: Target directories in component's source code. Multiple
+        values should be separated with commas.
+      type: string
+      default: .
     - name: caTrustConfigMapKey
       description: The name of the key in the ConfigMap that contains the
         CA bundle data.
@@ -143,6 +148,8 @@ spec:
           valueFrom:
             fieldRef:
               fieldPath: metadata.annotations['pipelinesascode.tekton.dev/log-url']
+        - name: TARGET_DIRS
+          value: $(params.TARGET_DIRS)
       script: |
         #!/usr/bin/env bash
 
@@ -196,7 +203,34 @@ spec:
         echo "INFO: Running 'snyk code test'.."
         # We do want to expand ARGS (it can be multiple CLI flags, not just one)
         # shellcheck disable=SC2086
-        snyk code test $ARGS --severity-threshold="$SEVERITY_THRESHOLD" "$SOURCE_CODE_DIR" --max-depth=1 --sarif-file-output="${SOURCE_CODE_DIR}"/sast_snyk_check_out.json 1>&2 >>stdout.txt
+
+        # Generate full paths for each directory in TARGET_DIRS
+        IFS="," read -ra TARGETS_ARRAY <<<"$TARGET_DIRS"
+        for d in "${TARGETS_ARRAY[@]}"; do
+          potential_path="${SOURCE_CODE_DIR}/${d}"
+          resolved_path=$(realpath -m "$potential_path")
+
+          # Ensure resolved path is still within SOURCE_CODE_DIR
+          if [[ ! "$resolved_path" == "$SOURCE_CODE_DIR"* ]]; then
+            echo "Error: path traversal attempt, '$potential_path' is outside '$SOURCE_CODE_DIR'"
+            exit 1
+          fi
+
+          # Ensure directory exists
+          if [ ! -d "$resolved_path" ]; then
+            echo "Warning: Directory $resolved_path does not exist, skipping"
+            continue
+          fi
+
+          echo "INFO: Scanning directory: $resolved_path"
+          # We do want to expand ARGS (it can be multiple CLI flags, not just one)
+          # shellcheck disable=SC2086
+          snyk code test $ARGS --severity-threshold="$SEVERITY_THRESHOLD" "$resolved_path" --max-depth=1 --sarif-file-output="${resolved_path}/sast_snyk_check_out_${d//\//_}.json" 1>&2 >>stdout.txt || true
+        done
+
+        # Merge all SARIF outputs
+        find "$SOURCE_CODE_DIR" -name "sast_snyk_check_out_*.json" -exec cat {} + >"${SOURCE_CODE_DIR}/sast_snyk_check_out.json"
+
         SNYK_EXIT_CODE=$?
         set -e
         test_not_skipped=0
