Add org.opencontainers.image.source to images
This is a OCI standard label specificed in [1].

[1] https://specs.opencontainers.org/image-spec/annotations/

--- a/pipelines/core-services/core-services.yaml
+++ b/pipelines/core-services/core-services.yaml
@@ -252,6 +252,8 @@ spec:
       - $(params.build-args[*])
     - name: BUILD_ARGS_FILE
       value: $(params.build-args-file)
+    - name: SOURCE_URL
+      value: $(tasks.clone-repository.results.url)
     - name: IMAGE_APPEND_PLATFORM
       value: "true"
     runAfter:
