--- a/pipelines/template-build/template-build.yaml
+++ b/pipelines/template-build/template-build.yaml
@@ -348,23 +348,7 @@ spec:
         value: $(tasks.build-image-index.results.IMAGE_URL)
       - name: image-digest
         value: $(tasks.build-image-index.results.IMAGE_DIGEST)
-  finally:
-    - name: show-summary
-      taskRef:
-        name: summary
-        version: "0.2"
-      params:
-      - name: pipelinerun-name
-        value: "$(context.pipelineRun.name)"
-      - name: git-url
-        value: "$(tasks.clone-repository.results.url)?rev=$(tasks.clone-repository.results.commit)"
-      - name: image-url
-        value: $(params.output-image)
-      - name: build-task-status
-        value: $(tasks.build-image-index.status)
-      workspaces:
-      - name: workspace
-        workspace: workspace
+  finally: []
   results:
     - name: IMAGE_URL
       value: "$(tasks.build-image-index.results.IMAGE_URL)"
