buildah*/0.5: mechanical fixes for new version
- drop version-specific files that do not apply (migrations)
- fix version numbers in version annotation and in
  recipe.yaml/kustomization.yaml paths
- add buildah-remote 0.5 to generator script
- add buildah-min 0.5 to allowlist for missing oci-ta variants

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/buildah-remote/0.5/buildah-remote.yaml
+++ b/task/buildah-remote/0.5/buildah-remote.yaml
@@ -6,7 +6,7 @@ metadata:
     tekton.dev/tags: image-build, konflux
   creationTimestamp: null
   labels:
-    app.kubernetes.io/version: 0.4.1
+    app.kubernetes.io/version: "0.5"
     build.appstudio.redhat.com/build_type: docker
   name: buildah-remote
 spec:
