buildah*/0.5: fix: include Hermeto content in SBOM
In 045c464c055ba04b6d3087fa2edaa411cf1adb12, we accidentally stopped
including the Hermeto content in the final SBOM.

The sbom-generation step expected the SBOM to be called
sbom-cachi2.json, but it's actually called sbom-prefetch.json.

Fix the bug, add MIGRATION.md docs that explain that no migration is
needed.

Signed-off-by: Adam Cmiel <acmiel@redhat.com>

--- a/task/buildah-min/0.5/buildah-min.yaml
+++ b/task/buildah-min/0.5/buildah-min.yaml
@@ -1010,8 +1010,8 @@ spec:
         --base-image-digest-file "/shared/base_images_digests"
       )
 
-      if [ -f "$(workspaces.source.path)/sbom-cachi2.json" ]; then
-        mobster_args+=(--from-hermeto "$(workspaces.source.path)/sbom-cachi2.json")
+      if [ -f "$(workspaces.source.path)/sbom-prefetch.json" ]; then
+        mobster_args+=(--from-hermeto "$(workspaces.source.path)/sbom-prefetch.json")
       fi
 
       if [ -n "${TARGET_STAGE}" ]; then
