fix buildah build ignorefile precendence

--- a/task/buildah/0.5/buildah.yaml
+++ b/task/buildah/0.5/buildah.yaml
@@ -664,10 +664,10 @@ spec:
 
       # Make sure our labels.json file isn't filtered out
       containerignore=""
-      if [ -f "$SOURCE_CODE_DIR/$CONTEXT/.dockerignore" ]; then
-        containerignore="$SOURCE_CODE_DIR/$CONTEXT/.dockerignore"
-      elif [ -f "$SOURCE_CODE_DIR/$CONTEXT/.containerignore" ]; then
+      if [ -f "$SOURCE_CODE_DIR/$CONTEXT/.containerignore" ]; then
         containerignore="$SOURCE_CODE_DIR/$CONTEXT/.containerignore"
+      elif [ -f "$SOURCE_CODE_DIR/$CONTEXT/.dockerignore" ]; then
+        containerignore="$SOURCE_CODE_DIR/$CONTEXT/.dockerignore"
       fi
 
       if [ -n "$containerignore" ]; then
