Fix digest set to annotation
Signed-off-by: Chenxiong Qi <cqi@redhat.com>

--- a/task/tkn-bundle-oci-ta/0.2/tkn-bundle-oci-ta.yaml
+++ b/task/tkn-bundle-oci-ta/0.2/tkn-bundle-oci-ta.yaml
@@ -266,6 +266,7 @@ spec:
               --annotation "dev.konflux-ci.task.is-migration=true" \
               "$migration_image" "${migration_file_path##*/}"
             read -r migration_image_digest _ < <(sha256sum "$manifest_file")
+            migration_image_digest="sha256:${migration_image_digest}"
             printf "Pushed migration image %s, digest %s\n" "$migration_image" "$migration_image_digest" >&2
             popd
           fi
